--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ langchain-core = "^0.1.0"
 fastapi = "^0.104.0"
 uvicorn = "^0.24.0"
 asyncpg = "^0.29.0"
+sqlalchemy = "^2.0.0"
+alembic = "^1.13.0"
 pydantic = "^2.5.0"
 pydantic-settings = "^2.1.0"
 pyyaml = "^6.0.1"
