feat(validation): add comprehensive validation demos and readiness checks
- Add Generation 1 basic functionality validation demo
- Add Generation 2 robustness validation demo with error handling and security tests
- Add Generation 3 scaling validation demos (full and simplified) for performance and concurrency
- Add production deployment readiness validation with checks for docker, config, security, monitoring, performance, and documentation
- Add comprehensive quality gates validation covering code execution, performance, security, robustness, and integration
- Include test result JSON files for all validation stages
- Update .env.test with additional test keys and feature flags

This set of additions provides a structured validation framework to ensure system quality, robustness, scalability, and production readiness.

Co-authored-by: terragon-labs[bot] <terragon-labs[bot]@users.noreply.github.com>

--- a/.env.test
+++ b/.env.test
@@ -3,3 +3,9 @@ LOG_LEVEL=DEBUG
 DEBUG=true
 OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4317
 OTEL_SERVICE_NAME=llm-cost-tracker-test
+OPENAI_API_KEY=test-key
+ANTHROPIC_API_KEY=test-key
+SECRET_KEY=test-secret-key-for-development
+ENABLE_BUDGET_ALERTS=true
+ENABLE_MODEL_SWAPPING=true
+ENABLE_METRICS_EXPORT=true
